# camera-geometry-lab

./: .gitignore  360_masking_gravity_aware_plan.md  OSV_file_testing_approach.md  README.md  osv_investigation.md  osv_investigation_validation_response.md  pyproject.toml
camera_geometry_lab/: __init__.py  distortion.py  rays.py  reproject.py
configs/: eagle.json  insta360_oner_1inch.json  nikon_d800_20mm.json
device_reports/: README.md
device_reports/osmo-360/osv-telemetry-2026-04-12/: OSV_Telemetry_Report.md  README.md  manifest.json  osv_telemetry_report.html  telemetry_report.json
launchedpix/: Convert_CalibratedFrameEquidistantEquisolidEquirectangularModel_to_SolidAngle_and_RayDirections.py  Convert_SARayDirQuaternion_withmask_To_PolarAngle_and_Azimuth.py  HANDOFF_launchedpix_status.md  Invert-Projection-Equations_chatgpt-convo.md  README_Project_Brief_Camera_Projection_Framework.md  Reproject_FEES_IMM_2_Equirectangular.py  conversation-timeline.md  convert_chatgpt_mhtml_to_markdown.py  equi_2_cubefaces.py  graphically_combine_mask_and_image.py
launchedpix/OSV research with gravity/: 360_masking_pipeline_working_plan.docx.md
legacy/: osv_investigation_pre_validation.md
masking/: 01_masking_for_docx_outline.md  02_equisolid_bridge_plan.md  03_lens_boundary_mask_plan.md  04_cubemap_validation_tasks.md  05_step4_full_plan.md  README.md
src/camera_geometry_lab/: cli.py  config.py  io_raw.py  models.py  solid_angle.py
tests/: conftest.py  test_build_osv_telemetry_report.py  test_geometry.py
tools/: build_osv_telemetry_report.py
