[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-geometry-lab"
version = "0.1.0"
description = "Camera geometry and reprojection tools for calibrated wide-angle imaging systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
docs = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.scripts]
camera-geometry-lab = "camera_geometry_lab.cli:main"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
